--- a/branches/integration/baseSite/stylesheets/modif.css
+++ b/branches/integration/baseSite/stylesheets/modif.css
@@ -1,8 +1,11 @@
 html, body, #map-canvas { height: 100%; margin: 0; padding: 0; position: relative;}
-#content{
+
+#content { 
+	display:none;
 	position: absolute;
-	top:60px;
-	z-index:2;
+	top : 200px;
+	left: 0px;
+	background-color: rgba(255,255,255,0.9);
 }
 
 .top-bar{
